size of experience section no longer too big

--- a/src/sass/experience.scss
+++ b/src/sass/experience.scss
@@ -1,6 +1,5 @@
 .experience{
   padding: 50px;
-  min-height: 100vh;
 
   h2{
     margin: 20px auto;
